# collect_service

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  init.sql  log_filters.py  manage.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
backends/: spotify.py
chats/: admin.py  models.py  serializers.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_chat_unique_together.py  0003_alter_chat_unique_together.py
chats/tests/: factories.py
collect_service/: asgi.py  conftest.py  manage.py  pytest.ini  settings.py  urls.py  wsgi.py
collect_service/collect_api/: admin.py  models.py  serializers.py  urls.py  views.py
collect_service/collect_service/: settings.py  urls.py
comments/: models.py  serializers.py  views.py
comments/migrations/: 0001_initial.py  0002_comment_deleted.py  0003_alter_comment_managers.py  0003_alter_comment_options.py  0004_remove_comment_deleted.py
comments/tests/: factories.py
core/: mixins.py  models.py
core/tests/: models.py
data/db/: postmaster.pid
frontend/: FrontendDockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue
tags/: models.py  serializers.py  views.py
tags/migrations/: 0001_initial.py  0002_tag_deleted.py  0003_alter_tag_managers.py  0003_alter_tag_title.py  0003_alter_tag_unique_together.py  0004_alter_tag_options.py
things/: admin.py  apps.py  email.py  filters.py  models.py  serializers.py  services.py  urls.py  views.py
vote/: admin.py  models.py  serializers.py
(+218 files in other folders)
